Moved all files into a more standard format. Each component is now a directory in the components directory.

--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -2,7 +2,7 @@
 .Search-header {
   height: 150%;
   background-color: rgb(34, 34, 34);
-  background: url(./assets/na_stars.jpg);
+  background: url(../../assets/na_stars.jpg);
   background-size: 100% auto;
 }
 
