--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -17,7 +17,7 @@
 section#main-page {
   text-align: center;
   background-color: #4a4acd;
-  background: url(./assets/na_stars.jpg);
+  background: url(../../assets/na_stars.jpg);
   background-size: 100% auto;
   padding: 150px;
   opacity: 1;
