Separated photos from table. Photo modal does not load

--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -1,5 +1,5 @@
 
-.Search-header {
+#search-header {
   height: 150%;
   background-color: rgb(34, 34, 34);
   background: url(../../assets/na_stars.jpg);
