Positioned the search bar on the top of the page.

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,6 +1,9 @@
-.App-header {
+#App-header {
   background-color: #282c34;
+  background: url(../../assets/na_stars.jpg);
+  background-size: 100% auto;
   text-align: center;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
