--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -1,9 +1,17 @@
 
 #search-header {
-  height: 150%;
-  background-color: rgb(34, 34, 34);
-  background: url(../../assets/na_stars.jpg);
-  background-size: 100% auto;
+  width: 100%;
+  min-height: 400px;
+  background-color: rgb(0, 0, 0, 0);
+}
+
+#search-tools {
+  z-index: 99;
+  position: fixed;
+  background-color: rgb(0, 0, 0, .4);
+  top: 0;
+  /* height: 60px; */
+  width: 100%;
 }
 
 #search-name {
@@ -21,6 +29,11 @@
   font-size: 20px;
   border: 3px solid black;
   border-radius: 14px;
+}
+
+#search-results {
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 button.search-submit {
